Fixes options and removes common
Removed common.rb config file (unused by app)

--- a/templates/options.rb.j2
+++ b/templates/options.rb.j2
@@ -19,6 +19,9 @@ APP_ROOT = File.expand_path(File.join(File.dirname(__FILE__), '..'))
 # Mapping HAProxy de l'application, ex : '/v3/docs'
 APP_PATH = '{{ laclasse_services.publipostage.path | regex_replace('\/+$', '') }}'
 
+# application version
+APP_VERSION='{{ laclasse_publipostage_version  }}'
+
 # Langage par défaut de l'application
 LANG = 'fr'
 
