--- a/templates/options.rb.j2
+++ b/templates/options.rb.j2
@@ -35,7 +35,7 @@ SESSION_TIME = 3600
 URL_ENT = '{{ laclasse_main_url }}'
 
 # nom du serveur d'annuaire ENT (xml-aaf académiques)
-SERVICE_ANNUAIRE_ENT = 'http://www.dev.laclasse.com/annuaire/'
+SERVICE_ANNUAIRE_ENT = '{{ laclasse_annuaire_aaf_url }}'
 
 module Configuration
   GIT_COMMIT = '{{ git_tag.stdout }}'
